fix: overflow delet

--- a/random-jokes/styles/style.css
+++ b/random-jokes/styles/style.css
@@ -87,7 +87,7 @@ body {
   font-family: 'Merriweather', 'Roboto', sans-serif;
   max-width: 1440px; /* максимальная ширина экрана */
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
   margin: 0 auto;
   line-height: 1.5em;
   transition: all 0.5s;
